# Homework_22.1

./: README.md  product.json  products.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_remove_blogpost_updated_at_and_more.py  0003_alter_blogpost_preview.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at_alter_product_created_at_and_more.py  0003_alter_category_options_product_views_counter_and_more.py  0004_version.py
catalog/templates/: base.html  home.html  inc_menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_confirm_delete.html  version_form.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
